src/main/gen/com/kobra/plugin/parser/KobraParser.java
// This is a generated file. Not intended for manual editing.
package com.kobra.plugin.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.kobra.plugin.kobraplugin.psi.KobraTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class KobraParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return program(b, l + 1);
  }

  /* ********************************************************** */
  // '+'
  public static boolean ADD(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ADD")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ADD, "<add>");
    r = consumeToken(b, "+");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // '->'
  public static boolean ARROW(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ARROW")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARROW, "<arrow>");
    r = consumeToken(b, "->");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'as'
  public static boolean AS(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AS")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, AS, "<as>");
    r = consumeToken(b, "as");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // '='
  public static boolean ASSIGNMENT(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ASSIGNMENT")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSIGNMENT, "<assignment>");
    r = consumeToken(b, "=");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'as?'
  public static boolean AS_SAFE(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AS_SAFE")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, AS_SAFE, "<as safe>");
    r = consumeToken(b, "as?");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'break'
  public static boolean BREAK(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BREAK")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BREAK, "<break>");
    r = consumeToken(b, "break");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'true'| 'false'
  public static boolean BooleanLiteral(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BooleanLiteral")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BOOLEAN_LITERAL, "<boolean literal>");
    r = consumeToken(b, "true");
    if (!r) r = consumeToken(b, "false");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'catch'
  public static boolean CATCH(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CATCH")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CATCH, "<catch>");
    r = consumeToken(b, "catch");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'class'
  public static boolean CLASS_(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CLASS_")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CLASS_, "<class>");
    r = consumeToken(b, "class");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // ':'
  public static boolean COLON(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "COLON")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COLON, "<colon>");
    r = consumeToken(b, ":");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // '::'
  public static boolean COLONCOLON(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "COLONCOLON")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COLONCOLON, "<coloncolon>");
    r = consumeToken(b, "::");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // ','
  public static boolean COMMA(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "COMMA")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COMMA, "<comma>");
    r = consumeToken(b, ",");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // '&&'
  public static boolean CONJ(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CONJ")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONJ, "<conj>");
    r = consumeToken(b, "&&");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'constructor'
  public static boolean CONSTRUCTOR(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CONSTRUCTOR")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONSTRUCTOR, "<constructor>");
    r = consumeToken(b, "constructor");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'continue'
  public static boolean CONTINUE(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CONTINUE")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONTINUE, "<continue>");
    r = consumeToken(b, "continue");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // '--'
  public static boolean DECR(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DECR")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DECR, "<decr>");
    r = consumeToken(b, "--");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // '||'
  public static boolean DISJ(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DISJ")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DISJ, "<disj>");
    r = consumeToken(b, "||");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // '/'
  public static boolean DIV(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DIV")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DIV, "<div>");
    r = consumeToken(b, "/");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // '.'
  public static boolean DOT(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DOT")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DOT, "<dot>");
    r = consumeToken(b, ".");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // COMMENT
  public static boolean DelimitedComment(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DelimitedComment")) return false;
    if (!nextTokenIs(b, COMMENT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMENT);
    exit_section_(b, m, DELIMITED_COMMENT, r);
    return r;
  }

  /* ********************************************************** */
  // "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9"
  public static boolean Digit(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Digit")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DIGIT, "<digit>");
    r = consumeToken(b, "0");
    if (!r) r = consumeToken(b, "1");
    if (!r) r = consumeToken(b, "2");
    if (!r) r = consumeToken(b, "3");
    if (!r) r = consumeToken(b, "4");
    if (!r) r = consumeToken(b, "5");
    if (!r) r = consumeToken(b, "6");
    if (!r) r = consumeToken(b, "7");
    if (!r) r = consumeToken(b, "8");
    if (!r) r = consumeToken(b, "9");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'else'
  public static boolean ELSE(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ELSE")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ELSE, "<else>");
    r = consumeToken(b, "else");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // '=='
  public static boolean EQEQ(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EQEQ")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EQEQ, "<eqeq>");
    r = consumeToken(b, "==");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // '!='
  public static boolean EXCL_EQ(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EXCL_EQ")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXCL_EQ, "<excl eq>");
    r = consumeToken(b, "!=");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // '!'
  public static boolean EXCL_NO_WS(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EXCL_NO_WS")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXCL_NO_WS, "<excl no ws>");
    r = consumeToken(b, "!");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // '!' Hidden
  public static boolean EXCL_WS(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EXCL_WS")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXCL_WS, "<excl ws>");
    r = consumeToken(b, "!");
    r = r && Hidden(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'finally'
  public static boolean FINALLY(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FINALLY")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FINALLY, "<finally>");
    r = consumeToken(b, "finally");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'for'
  public static boolean FOR(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FOR")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FOR, "<for>");
    r = consumeToken(b, "for");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'fun'
  public static boolean FUN(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FUN")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FUN, "<fun>");
    r = consumeToken(b, "fun");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // '>='
  public static boolean GE(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "GE")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, GE, "<ge>");
    r = consumeToken(b, ">=");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // DelimitedComment | LineComment | WS
  public static boolean Hidden(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Hidden")) return false;
    if (!nextTokenIs(b, "<hidden>", COMMENT, WS)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, HIDDEN, "<hidden>");
    r = DelimitedComment(b, l + 1);
    if (!r) r = LineComment(b, l + 1);
    if (!r) r = consumeToken(b, WS);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'if'
  public static boolean IF(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "IF")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, IF, "<if>");
    r = consumeToken(b, "if");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'import'
  public static boolean IMPORT(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "IMPORT")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, IMPORT, "<import>");
    r = consumeToken(b, "import");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'in'
  public static boolean IN(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "IN")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, IN, "<in>");
    r = consumeToken(b, "in");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // '++'
  public static boolean INCR(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "INCR")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, INCR, "<incr>");
    r = consumeToken(b, "++");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'interface'
  public static boolean INTERFACE(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "INTERFACE")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, INTERFACE, "<interface>");
    r = consumeToken(b, "interface");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'is'
  public static boolean IS(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "IS")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, IS, "<is>");
    r = consumeToken(b, "is");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // Letter [{'0' | '1' | '2' | '3' | '4' | '5' | '6' | '7' | '8' | '9'} | Letter]
  public static boolean Identifier(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Identifier")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, IDENTIFIER, "<identifier>");
    r = Letter(b, l + 1);
    r = r && Identifier_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // [{'0' | '1' | '2' | '3' | '4' | '5' | '6' | '7' | '8' | '9'} | Letter]
  private static boolean Identifier_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Identifier_1")) return false;
    Identifier_1_0(b, l + 1);
    return true;
  }

  // {'0' | '1' | '2' | '3' | '4' | '5' | '6' | '7' | '8' | '9'} | Letter
  private static boolean Identifier_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Identifier_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Identifier_1_0_0(b, l + 1);
    if (!r) r = Letter(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // '0' | '1' | '2' | '3' | '4' | '5' | '6' | '7' | '8' | '9'
  private static boolean Identifier_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Identifier_1_0_0")) return false;
    boolean r;
    r = consumeToken(b, "0");
    if (!r) r = consumeToken(b, "1");
    if (!r) r = consumeToken(b, "2");
    if (!r) r = consumeToken(b, "3");
    if (!r) r = consumeToken(b, "4");
    if (!r) r = consumeToken(b, "5");
    if (!r) r = consumeToken(b, "6");
    if (!r) r = consumeToken(b, "7");
    if (!r) r = consumeToken(b, "8");
    if (!r) r = consumeToken(b, "9");
    return r;
  }

  /* ********************************************************** */
  // '1' | '2' | '3' | '4' | '5' | '6' | '7' | '8' | '9'
  //         [{'0' | '1' | '2' | '3' | '4' | '5' | '6' | '7' | '8' | '9'}]
  //     | '0'
  public static boolean IntegerLiteral(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "IntegerLiteral")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, INTEGER_LITERAL, "<integer literal>");
    r = consumeToken(b, "1");
    if (!r) r = consumeToken(b, "2");
    if (!r) r = consumeToken(b, "3");
    if (!r) r = consumeToken(b, "4");
    if (!r) r = consumeToken(b, "5");
    if (!r) r = consumeToken(b, "6");
    if (!r) r = consumeToken(b, "7");
    if (!r) r = consumeToken(b, "8");
    if (!r) r = IntegerLiteral_8(b, l + 1);
    if (!r) r = consumeToken(b, "0");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // '9'
  //         [{'0' | '1' | '2' | '3' | '4' | '5' | '6' | '7' | '8' | '9'}]
  private static boolean IntegerLiteral_8(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "IntegerLiteral_8")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "9");
    r = r && IntegerLiteral_8_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // [{'0' | '1' | '2' | '3' | '4' | '5' | '6' | '7' | '8' | '9'}]
  private static boolean IntegerLiteral_8_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "IntegerLiteral_8_1")) return false;
    IntegerLiteral_8_1_0(b, l + 1);
    return true;
  }

  // '0' | '1' | '2' | '3' | '4' | '5' | '6' | '7' | '8' | '9'
  private static boolean IntegerLiteral_8_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "IntegerLiteral_8_1_0")) return false;
    boolean r;
    r = consumeToken(b, "0");
    if (!r) r = consumeToken(b, "1");
    if (!r) r = consumeToken(b, "2");
    if (!r) r = consumeToken(b, "3");
    if (!r) r = consumeToken(b, "4");
    if (!r) r = consumeToken(b, "5");
    if (!r) r = consumeToken(b, "6");
    if (!r) r = consumeToken(b, "7");
    if (!r) r = consumeToken(b, "8");
    if (!r) r = consumeToken(b, "9");
    return r;
  }

  /* ********************************************************** */
  // '<'
  public static boolean LANGLE(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "LANGLE")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, LANGLE, "<langle>");
    r = consumeToken(b, "<");
    exit_section_(b, l, m, r, false, null);
    return r;
  }
